[tool.poetry]
name = "pyspark-preprocessing"
version = "0.1.0"
description = ""
authors = ["keyhong <“wnhong96@gmail.com”>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.1"
pyproj = "^3.6.1"
numpy = "^2.0.0"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.5.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# defaults line-length = 88
line-length = 119
target-version = "py312"  # the python version to target, useful when considering code upgrades, defaults to "py310"
fix = true

# All uncommented lines should be fixed and enabled
lint.select = [
    # "F" is Pyflakes, "E" is pycodestyle
    "E4", "E7", "E9", "F",
    "W",
    "PLC", "PLE", "PLW", # pylint
    "I", # isort
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "ISC", # flake8-implicit-str-concat
    "PIE", # flake8-pie
    "PT", # flake8-pytest-style
    "Q", # flake8-quotes
    "TID", # flake8-tidy-imports
    # explicitly select rules under the nursery-flag introduced in ruff 0.0.269
    # remove once enabled via the "E" selector
    "E111",
    "E112",
    "E113",
    "E114",
    "E115",
    "E116",
    "E117",
    "E201",
    "E202",
    "E203",
    "E211",
    "E221",
    "E222",
    "E223",
    "E224",
    "E225",
    "E226",
    "E227",
    "E228",
    "E231",
    "E251",
    "E252",
    "E261",
    "E262",
    "E265",
    "E266",
    "E271",
    "E272",
    "E273",
    "E274",
    "E275",
]

# All these ignores should be fixed (except for Q000 which should stay)
ignore = [
    "COM812", # flake8-commas "Trailing comma missing"
    "ISC001"
]

[tool.ruff.lint.pydocstyle]
convention = "google"